--- a/Snow.cbp
+++ b/Snow.cbp
@@ -55,32 +55,29 @@
 			<Add library="SDL2_test" />
 			<Add directory="$(#sdl2.lib)" />
 		</Linker>
-		<ExtraCommands>
-			<Add after="XCOPY $(#sdl2)\bin\*.dll $(TARGET_OUTPUT_DIR) /D /Y" />
-		</ExtraCommands>
-		<Unit filename="include/Core.h" />
-		<Unit filename="include/Core/Activity.h" />
-		<Unit filename="include/Core/Bundle.h" />
-		<Unit filename="include/Core/CSVEditor.h" />
-		<Unit filename="include/Core/CSVReader.h" />
-		<Unit filename="include/Core/Control.h" />
-		<Unit filename="include/Core/Debug.h" />
-		<Unit filename="include/Core/Font.h" />
-		<Unit filename="include/Core/Globals.h" />
-		<Unit filename="include/Core/Misc.h" />
-		<Unit filename="include/Core/OS.h" />
-		<Unit filename="include/Core/RenderTarget.h" />
-		<Unit filename="include/Core/ResFile.h" />
-		<Unit filename="include/Core/ResVal.h" />
-		<Unit filename="include/Core/RndPtr.h" />
-		<Unit filename="include/Core/SDLbase.h" />
-		<Unit filename="include/Core/Sound.h" />
-		<Unit filename="include/Core/Sprite.h" />
-		<Unit filename="include/Core/Surface.h" />
-		<Unit filename="include/Core/TCPNet.h" />
-		<Unit filename="include/Core/Thread.h" />
-		<Unit filename="include/Core/Timer.h" />
-		<Unit filename="include/Core/UDPNet.h" />
+		<Unit filename="include/Snow.h" />
+		<Unit filename="include/Snow/Activity.h" />
+		<Unit filename="include/Snow/Bundle.h" />
+		<Unit filename="include/Snow/CSVEditor.h" />
+		<Unit filename="include/Snow/CSVReader.h" />
+		<Unit filename="include/Snow/Control.h" />
+		<Unit filename="include/Snow/Debug.h" />
+		<Unit filename="include/Snow/Font.h" />
+		<Unit filename="include/Snow/Globals.h" />
+		<Unit filename="include/Snow/Misc.h" />
+		<Unit filename="include/Snow/OS.h" />
+		<Unit filename="include/Snow/RenderTarget.h" />
+		<Unit filename="include/Snow/ResFile.h" />
+		<Unit filename="include/Snow/ResVal.h" />
+		<Unit filename="include/Snow/RndPtr.h" />
+		<Unit filename="include/Snow/SDLbase.h" />
+		<Unit filename="include/Snow/Sound.h" />
+		<Unit filename="include/Snow/Sprite.h" />
+		<Unit filename="include/Snow/Surface.h" />
+		<Unit filename="include/Snow/TCPNet.h" />
+		<Unit filename="include/Snow/Thread.h" />
+		<Unit filename="include/Snow/Timer.h" />
+		<Unit filename="include/Snow/UDPNet.h" />
 		<Unit filename="src/Bundle.cpp" />
 		<Unit filename="src/CSVEditor.cpp" />
 		<Unit filename="src/CSVReader.cpp" />
