--- a/Snow/Snow/Snow.vcxproj.filters
+++ b/Snow/Snow/Snow.vcxproj.filters
@@ -129,4 +129,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Snow.def">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
