--- a/Snow/Snow/Snow.vcxproj
+++ b/Snow/Snow/Snow.vcxproj
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
+    <LinkIncremental>false</LinkIncremental>
     <IncludePath>D:\SDK\SDL2_ttf-2.0.14\include;D:\SDK\SDL2_net-2.0.1\include;D:\SDK\SDL2_mixer-2.0.1\include;D:\SDK\SDL2_image-2.0.1\include;D:\SDK\SDL2-2.0.4\include;$(WindowsSDK_IncludePath);F:\Snow\include;$(IncludePath)</IncludePath>
     <ReferencePath>D:\SDK\SDL2_image-2.0.1\lib\x86;D:\SDK\SDL2_mixer-2.0.1\lib\x86;D:\SDK\SDL2_net-2.0.1\lib\x86;D:\SDK\SDL2_ttf-2.0.14\lib\x86;D:\SDK\SDL2-2.0.4\lib\x86;$(ReferencePath)</ReferencePath>
     <LibraryPath>D:\SDK\SDL2_ttf-2.0.14\lib\x86;D:\SDK\SDL2_net-2.0.1\lib\x86;D:\SDK\SDL2_mixer-2.0.1\lib\x86;D:\SDK\SDL2_image-2.0.1\lib\x86;D:\SDK\SDL2-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
@@ -99,9 +99,15 @@
       <AdditionalIncludeDirectories>$(VC_IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_net.lib;SDL2_ttf.lib;SDL2.lib;SDL2test.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <CreateHotPatchableImage>Enabled</CreateHotPatchableImage>
+      <SuppressStartupBanner>false</SuppressStartupBanner>
+      <ModuleDefinitionFile>
+      </ModuleDefinitionFile>
+      <ImportLibrary>$(OutDir)$(TargetName)_Dbg.lib</ImportLibrary>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -116,6 +122,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Snow.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,6 +143,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_net.lib;SDL2_ttf.lib;SDL2.lib;SDL2test.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SuppressStartupBanner>false</SuppressStartupBanner>
+      <ModuleDefinitionFile>Snow.def</ModuleDefinitionFile>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -154,6 +164,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Snow.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -196,6 +207,9 @@
     <ClCompile Include="..\..\src\TCPNet.cpp" />
     <ClCompile Include="..\..\src\Thread.cpp" />
     <ClCompile Include="..\..\src\UDPNet.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Snow.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
